--- a/index-3.html
+++ b/index-3.html
@@ -63,7 +63,7 @@
 
                         <!-- social icons -->
                         <div class="social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-rss"></i></a>
                             <a href="#"><i class="fa fa-google-plus"></i></a>
