--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-rss"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
+                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i class="fa fa-google"></i></a>
                             <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
                         </div>
                         <!-- social icons close -->
