--- a/sermon-single.html
+++ b/sermon-single.html
@@ -29,8 +29,8 @@
                         <div id="logo">
                             <div class="inner">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="" class="logo-1">
-                                    <img src="img/logo-2.png" alt="" class="logo-2">
+                                    <img src="img/logo/logo-new.png" alt="" class="logo-1">
+                                    <img src="img/logo/logo-new-2.png" alt="" class="logo-2">
                                 </a>
 
                             </div>
