Minor updates to home page caption cards

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
                             <div class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
                                 data-whitespace="normal" data-start="500" data-speed="800" data-easing="easeOutQuad">
 
-                                <div class="caption-line1">TRANSFORMING LIVES</div>
-                                <div class="caption-line2">RESTORING HOPE</div>
+                                <div class="caption-line1">PROVERBS</div>
+                                <div class="caption-line2">11:28</div>
                                 <div class="caption-line3">
-                                    Transforming lives and societies through education, research and innovation.
+                                    "The righteous will flourish like a green leaf."
                                 </div>
-                                <a class="btn btn-slider caption-btn" href="#">READ MORE</a>
+                                <!-- <a class="btn btn-slider caption-btn" href="#">READ MORE</a> -->
                             </div>
                         </li>
 
@@ -141,9 +141,9 @@
                                     Put your faith into action today and let your actions be fueled by your faith.<br>
                                 </div>
 
-                                <div class="caption-cta">
+                                <!-- <div class="caption-cta">
                                     <a class="btn btn-slider" href="#">READ MORE</a>
-                                </div>
+                                </div> -->
                             </div>
                         </li>
 
@@ -173,9 +173,9 @@
                                 thoughts, mind, body and spirit is to surrender it to Jesus.
                                 </div>
 
-                                <div class="caption-cta">
+                                <!-- <div class="caption-cta">
                                     <a class="btn btn-slider" href="#">READ MORE</a>
-                                </div>
+                                </div> -->
                             </div>
                         </li>
                     </ul>
