Commented out the countdown container

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <!-- section close -->
 
             <!-- section begin -->
-            <section id="countdown-container" data-speed="5" data-type="background">
+            <!-- <section id="countdown-container" data-speed="5" data-type="background">
                 <div class="container">
                     <div class="row text-center">
                         <div class="col-md-6 wow fadeInLeft">
@@ -308,7 +308,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- section close -->
 
             <!-- section begin -->
