Updated signature image

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                             </p>
 
                             <p class="wow fadeIn" data-wow-delay='1.5s'>
-                                <img src="img/misc/pic-5.png" alt="">
+                                <img src="img/misc/pic-5-jamie.png" alt="">
                             </p>
 
                         </div>
