Added pastor photo

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                         </div>
 
                         <div class="col-md-6 wow fadeInUp">
-                            <img src="img/misc/pic-4.png" class="img-responsive" alt="">
+                            <img src="img/misc/pic-4-jamie.png" class="img-responsive" alt="">
                         </div>
                     </div>
                 </div>
