Updated about the church section

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".5s">
                             <img src="img/misc/pic-1.jpg" class="img-responsive" alt="">
-                            <h3>Our Community</h3>
+                            <h3>Vision</h3>
                             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
                             architecto.
@@ -332,7 +332,7 @@
                         </div>
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".75s">
                             <img src="img/misc/pic-2.jpg" class="img-responsive" alt="">
-                            <h3>Church Mission</h3>
+                            <h3>Mission</h3>
                             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
                             architecto.
