--- a/index.html
+++ b/index.html
@@ -601,9 +601,10 @@
                             <div id="testi-carousel" class="testi-slider text-center wow fadeInUp">
                                 <div class="item">
                                     <img src="img/testi/pic%20(1).jpg" alt="" class="img-circle">
-                                    <blockquote>Blessing theme has a real desire and heart for ministry within the local
-                                        church</blockquote>
-                                    <span class="testi-by">Aline Drummond</span>
+                                    <blockquote>They preach the truth at this little home mission. There is a great sense of community and Pastor 
+                                        Jamie Deyhle and his wife Jenni really care about the people that come to their Church services and Bible study. 
+                                        This place is truly a light to the west side of Cincinnati Ohio.</blockquote>
+                                    <span class="testi-by">Gina</span>
                                 </div>
                                 <div class="item">
                                     <img src="img/testi/pic%20(2).jpg" alt="" class="img-circle">
