--- a/index.html
+++ b/index.html
@@ -432,22 +432,16 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 wow fadeInLeft" data-wow-delay=".5s">
-                            <h1>Take Me To Church</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco
-                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                                in
-                                voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <h1>A Word From The Pastor</h1>
+                            <p>
+                                We are Apostolic in doctrine and Pentecostal in experience. We are here to offer biblically sound healing, beginning with an Acts 2:38–39 
+                                experience: repentance, baptism in the name of Jesus Christ, and the infilling of the Holy Ghost with the evidence of speaking in other tongues 
+                                as the Spirit gives utterance. We believe in one God, and His name is Jesus Christ. We also believe in a lifestyle of holiness and separation 
+                                from the world unto the Lord.
+                            </p>
 
                             <p>
-                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                                architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-                                sit
-                                aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                                voluptatem sequi nesciunt.
+                                
                             </p>
 
                             <p class="wow fadeIn" data-wow-delay='1.5s'>
