Updated about the church section

--- a/index.html
+++ b/index.html
@@ -323,32 +323,26 @@
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".5s">
                             <img src="img/misc/pic-1.jpg" class="img-responsive" alt="">
                             <h3>Vision</h3>
-                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto.
+                            Vision Statement
                             <br>
                             <br>
-                            <a href="#" class="st-btn">Read More</a>
+                            <!-- <a href="#" class="st-btn">Read More</a> -->
                         </div>
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".75s">
                             <img src="img/misc/pic-2.jpg" class="img-responsive" alt="">
                             <h3>Mission</h3>
-                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto.
+                            Mission Statement
                             <br>
                             <br>
-                            <a href="#" class="st-btn">Read More</a>
+                            <!-- <a href="#" class="st-btn">Read More</a> -->
                         </div>
                         <div class="col-md-4 wow fadeInRight" data-wow-delay="1s">
                             <img src="img/misc/pic-3.jpg" class="img-responsive" alt="">
                             <h3>Participate With Us</h3>
-                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto.
+                            Participate With Us Statement
                             <br>
                             <br>
-                            <a href="#" class="st-btn">Read More</a>
+                            <!-- <a href="#" class="st-btn">Read More</a> -->
                         </div>
                     </div>
                 </div>
