Commented out the blog section

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <!-- section close -->
 
             <!-- section begin -->
-            <section id="page-blog" class="no-padding">
+            <!-- <section id="page-blog" class="no-padding">
 
                 <div class="fullwidth">
                     <div class="one-fourth text-center">
@@ -531,7 +531,7 @@
                     </div>
                 </div>
                 <div class="clearfix"></div>
-            </section>
+            </section> -->
             <!-- section close -->
 
             <!-- section begin -->
