--- a/index-3.html
+++ b/index-3.html
@@ -53,8 +53,8 @@
                                     </ul>
                                 </li>
                                 <li><a href="sermons.html">Sermons</a></li>
-                                <li><a href="features.html">Features</a></li>
-                                <li><a href="news.html">News</a></li>
+                                <!-- <li><a href="features.html">Features</a></li>
+                                <li><a href="news.html">News</a></li> -->
                                 <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
