--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                                         <li><a href="sermon-single.html">Single Page</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="features.html">Features</a></li>
+                                <!-- <li><a href="features.html">Features</a></li>
                                 <li><a href="news.html">News</a>
                                     <ul>
                                         <li><a href="news.html">News List</a></li>
                                         <li><a href="news-single.html">Single Page</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
                                 <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
