Phone number on clickable on mobile, not on desktop

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Blessing</title>
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-	<div id="preloader"></div>
+    <div id="preloader"></div>
     <div id="wrapper">
         <!-- header begin -->
         <header>
@@ -58,13 +59,18 @@
                         </div>
 
                         <div class="social">
-                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i class="fa fa-instagram"></i></a>
-                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i class="fa fa-youtube-play"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-youtube-play"></i></a>
                             <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
                             <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
-                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i class="fa fa-google"></i></a>
-                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                    class="fa fa-google"></i></a>
+                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                    class="fa fa-envelope-o"></i></a>
                         </div>
                         <!-- mainmenu close -->
                     </div>
@@ -103,13 +109,16 @@
 
 
 
-                                    <input type="text" class="form-control" name="name" id="name" placeholder="Your name" />
+                                    <input type="text" class="form-control" name="name" id="name"
+                                        placeholder="Your name" />
 
                                     <div id="error_email" class="error">Please check your email</div>
-                                    <input type="text" class="form-control" name="email" id="email" placeholder="Your email" />
+                                    <input type="text" class="form-control" name="email" id="email"
+                                        placeholder="Your email" />
 
                                     <div id="error_message" class="error">Please check your message</div>
-                                    <textarea cols="10" rows="10" name="message" id="message" class="form-control" placeholder="Your message"></textarea>
+                                    <textarea cols="10" rows="10" name="message" id="message" class="form-control"
+                                        placeholder="Your message"></textarea>
 
                                     <div id="mail_success" class="success">Thank you. Your message has been sent.</div>
                                     <div id="mail_failed" class="error">Error, email not sent</div>
@@ -129,33 +138,37 @@
                         <div class="contact-info">
 
                             <div class="social-icons">
-                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i class="fa fa-instagram"></i></a>
-                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i class="fa fa-youtube-play"></i></a>
-                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                            <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
-                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i class="fa fa-google"></i></a>
-                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                        class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                        class="fa fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                        class="fa fa-youtube-play"></i></a>
+                                <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                                <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
+                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                        class="fa fa-google"></i></a>
+                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                        class="fa fa-envelope-o"></i></a>
                             </div>
 
                             <div class="divider-line"></div>
 
                             <span class="title">Telephone:</span>
-                            0221 800 900
-						
-						<div class="divider-line"></div>
+                            <span class="phone-desktop">(513) 555-1234</span>
+                            <a class="phone-mobile" href="tel:+15135551234">(513) 555-1234</a>
 
-                            <span class="title">Church Time:</span>
-                            Sunday 06:00 and 09:00<br>
-                            Sunday school 08:00<br>
-                            Sisters meeting: Wednesday 20:00<br>
-                            Elders meeting: Friday 20:00<br>
+                            <div class="divider-line"></div>
+
+                            <span class="title">Hours of Operation:</span>
+                            Service - Every Sunday 11AM & 6PM<br>
+                            Bible Study - Every Friday 7PM<br>
 
                             <div class="divider-line"></div>
 
                             <span class="title">Address:</span>
-                            12250 W Rose Butterfly Acres, Califoria 5580 USA
-						
+                            4466 Andreas Ave., Cincinnati, OH, United States, 45211
+
                         </div>
 
 
@@ -210,7 +223,7 @@
     <script src="js/contact.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script src="js/map.js"></script>
-    <script src="js/wow.min.js"></script>	
+    <script src="js/wow.min.js"></script>
     <script src="js/custom.js"></script>
 
     <!-- SLIDER REVOLUTION SCRIPTS  -->
@@ -219,4 +232,5 @@
     <script src="js/rev-setting-1.js"></script>
 
 </body>
+
 </html>
