Address opens google maps navigation

--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,14 @@
                             <div class="divider-line"></div>
 
                             <span class="title">Address:</span>
-                            4466 Andreas Ave., Cincinnati, OH, United States, 45211
+                            <span class="address-desktop">4466 Andreas Ave, Cincinnati, OH, United States, 45211</span>
+                            <a class="address-mobile" 
+                            href="https://www.google.com/maps/dir/?api=1&destination=4466+Andreas+Ave+Cincinnati+OH+45211" 
+                            target="_blank">
+                            4466 Andreas Ave, Cincinnati, OH, United States, 45211
+                            </a>
+
+                            
 
                         </div>
 
