--- a/news.html
+++ b/news.html
@@ -44,16 +44,17 @@
                                     </ul> -->
                                 </li>
                                 <li><a href="#">Events</a>
-                                    <ul>
+                                    <!-- <ul>
                                         <li><a href="events.html">List Type</a></li>
                                         <li><a href="events-calendar.html">Calendar Type</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li><a href="sermons.html">Sermons</a></li>
                                 <!-- <li><a href="features.html">Features</a></li>
                                 <li><a href="news.html">News</a></li> -->
                                 <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="contact.html">Contact</a></li>
+                                <li><a href="">Donate</a></li>
                             </ul>
                         </div>
 
