--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                                     </ul> -->
                                 </li>
                                 <li><a href="events.html">Events</a>
-                                    <ul>
+                                    <!-- <ul>
                                         <li><a href="events.html">Events List</a></li>
                                         <li><a href="events-calendar.html">Events Calendar</a></li>
                                         <li><a href="event-single.html">Single Page</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li><a href="sermons.html">Sermons</a>
-                                    <ul>
+                                    <!-- <ul>
                                         <li><a href="sermons.html">Sermons List</a></li>
                                         <li><a href="sermon-single.html">Single Page</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <!-- <li><a href="features.html">Features</a></li>
                                 <li><a href="news.html">News</a>
@@ -67,9 +67,10 @@
                                         <li><a href="news.html">News List</a></li>
                                         <li><a href="news-single.html">Single Page</a></li>
                                     </ul>
-                                </li> -->
+                                </li> -->                                
                                 <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="contact.html">Contact</a></li>
+                                <li><a href="">Donate</a></li>
                             </ul>
                         </div>
                         <!-- mainmenu close -->
