Commented out unnecessary events

--- a/events.html
+++ b/events.html
@@ -183,7 +183,7 @@
                     <!-- event item close -->
 
                     <!-- event item begin -->
-                    <div class="col-md-6 event-item">
+                    <!-- <div class="col-md-6 event-item">
                         <div class="inner">
                             <div class="left-col">
                                 <img src="img/events/pic (4).jpg" alt="">
@@ -201,11 +201,11 @@
                             <span class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
                             </span>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- event item close -->
 
                     <!-- event item begin -->
-                    <div class="col-md-6 event-item">
+                    <!-- <div class="col-md-6 event-item">
                         <div class="inner">
                             <div class="left-col">
                                 <img src="img/events/pic (5).jpg" alt="">
@@ -223,12 +223,11 @@
                             <span class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
                             </span>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- event item close -->
 
-
                     <!-- event item begin -->
-                    <div class="col-md-6 event-item">
+                    <!-- <div class="col-md-6 event-item">
                         <div class="inner">
                             <div class="left-col">
                                 <img src="img/events/pic (6).jpg" alt="">
@@ -246,10 +245,8 @@
                             <span class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
                             </span>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- event item close -->
-
-
                 </div>
             </div>
 
