Improved styling and responsiveness

--- a/index.html
+++ b/index.html
@@ -211,9 +211,10 @@
                             <div class="item">
                                 <div class="overlay">
                                     <span class="time">EVERY SUNDAY AT 11AM & 6PM</span>
-                                    <a href="#">
+                                    <!-- <a href="#">
                                         <h3>Sunday Worship</h3>
-                                    </a>
+                                    </a> -->
+                                    <h3>Sunday Worship</h3>
                                     <span class="desc">Join us this Sunday for a spirit-filled worship service as we
                                         gather to praise, learn, and grow
                                         together in Christ. Stay after for fellowship and a delicious meal — all are
@@ -226,9 +227,10 @@
                             <div class="item">
                                 <div class="overlay">
                                     <span class="time">EVERY WEDNESDAY AT 7PM</span>
-                                    <a href="#">
+                                    <!-- <a href="#">
                                         <h3>Wednesday Worship</h3>
-                                    </a>
+                                    </a> -->
+                                    <h3>Wednesday Worship</h3>
                                     <span class="desc">Experience God’s presence and community at our Sunday service.
                                         Following worship, we share a meal
                                         together — building friendships, encouraging one another, and celebrating God’s
@@ -241,9 +243,10 @@
                             <div class="item">
                                 <div class="overlay">
                                     <span class="time">EVERY FRIDAY AT 7PM</span>
-                                    <a href="#">
+                                    <!-- <a href="#">
                                         <h3>Bible Study</h3>
-                                    </a>
+                                    </a> -->
+                                    <h3>Bible Study</h3>
                                     <span class="desc">Join us every Friday as we dive into God’s Word together, grow in
                                         faith, and build meaningful
                                         fellowship. Come early for pizza and snacks! All are welcome!
@@ -334,7 +337,7 @@
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".5s">
                             <img src="img/misc/pic-1.jpg" class="img-responsive" alt="">
                             <h3>Vision</h3>
-                            Vision Statement
+                            <span>Vision Statement</span>
                             <br>
                             <br>
                             <!-- <a href="#" class="st-btn">Read More</a> -->
@@ -342,7 +345,7 @@
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".75s">
                             <img src="img/misc/pic-2.jpg" class="img-responsive" alt="">
                             <h3>Mission</h3>
-                            Mission Statement
+                            <span>Mission Statement</span>
                             <br>
                             <br>
                             <!-- <a href="#" class="st-btn">Read More</a> -->
@@ -350,7 +353,7 @@
                         <div class="col-md-4 wow fadeInRight" data-wow-delay="1s">
                             <img src="img/misc/pic-3.jpg" class="img-responsive" alt="">
                             <h3>Participate With Us</h3>
-                            Participate With Us Statement
+                            <span>Participate With Us Statement</span>
                             <br>
                             <br>
                             <!-- <a href="#" class="st-btn">Read More</a> -->
