Minor cosmetic change

--- a/sermons.html
+++ b/sermons.html
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1>Sermons</h1>
-                        <div class="sub-wrap my-2">
+                        <div class="sub-wrap pt-4">
                             <a href="https://www.youtube.com/channel/UCBKkkVjKQJ9L1rbHP36Su3Q?sub_confirmation=1"
                                 target="_blank" class="btn-sub-now">
                                 Subscribe Now
