Increased size of testimonial name

--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                                         Jamie Deyhle and his wife Jenni really care about the people that come to their
                                         Church services and Bible study.
                                         This place is truly a light to the west side of Cincinnati Ohio.</blockquote>
-                                    <span class="testi-by">Gina</span>
+                                    <span class="testi-by" style="font-size: 1.7rem;">-Gina</span>
                                 </div>
                                 <div class="item">
                                     <img src="img/testi/pic%20(2).jpg" alt="" class="img-circle">
